# rsomics-bigwig-compare

./: Cargo.toml  README.md
benches/: bench.rs
src/: bins.rs  cli.rs  lib.rs  operation.rs  output.rs
tests/: compat.rs  smoke.rs
tests/golden/: expected_add.bg  expected_first.bg  expected_log2.bg  expected_log2_bs10.bg  expected_log2_pc23.bg  expected_mean.bg  expected_ratio.bg  expected_reciprocal_ratio.bg  expected_second.bg  expected_subtract.bg
