[package]
name = "rsomics-bigwig-compare"
version = "0.1.0"
description = "Per-bin comparison of two bigWig files as a bedGraph track — Rust port of deeptools bigwigCompare"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bigwig-compare"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-bigwig-compare"
path = "src/main.rs"

[lib]
name = "rsomics_bigwig_compare"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bbi = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
